# overlaybd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  MAINTAINERS  README.md  TELEMETRY.md
baselayers/: CMakeLists.txt
src/: CMakeLists.txt  api_server.cpp  api_server.h  bk_download.cpp  bk_download.h  bs_overlaybd.c  c_tgt_wrapper.cpp  c_tgt_wrapper.h  config.h  exporter_handler.h  exporter_server.h  get_image_file.cpp  get_image_file.h  image_file.cpp  image_file.h  image_service.cpp  image_service.h  libtcmu.c.diff  main.cpp  metrics.h  metrics_fs.h  prefetch.cpp  prefetch.h  scsi_helper.cpp  scsi_helper.h  sure_file.cpp  sure_file.h  switch_file.cpp  switch_file.h  telemetry.cpp  telemetry.h  textexporter.h  version.h
src/example_config/: cred.json  overlaybd-registryv2.json  overlaybd-tcmu.service  overlaybd.json  redis.obd.config.json  stream-conv.yaml  telemetry.json  tgt-overlaybd.json
src/overlaybd/: CMakeLists.txt  PMF.h  alog-audit.h  alog-functionptr.h  alog-stdstring.h  alog.cpp  alog.h  async.h  async_stream.h  base64.h  callback.h  config_util.h  enumerable.h  estring.h  event-loop.cpp  event-loop.h  expirecontainer.h  identity-pool.cpp  identity-pool.h  io-alloc.h  iovector.cpp  iovector.h  object.h  range-lock.h  ring.cpp  ring.h  stream.h  string-keyed.h  string_view.h  tar_file.cpp  tar_file.h  timeout.h  tuple-assistance.h  utility.h  uuid.h  uuid4.cpp  uuid4.h
src/overlaybd/cache/: CMakeLists.txt  cache.cpp  cache.h  cached_fs.cpp  forwardcfs.h  pool_store.h  store.cpp
src/overlaybd/cache/download_cache/: CMakeLists.txt  download_cache.cpp  thread_range_lock.h
src/overlaybd/cache/frontend/: CMakeLists.txt  cached_file.cpp  cached_file.h  cached_fs.cpp
src/overlaybd/cache/full_file_cache/: CMakeLists.txt  cache_pool.cpp  cache_pool.h  cache_store.cpp  cache_store.h
src/overlaybd/cache/full_file_cache/test/: CMakeLists.txt  cache_test.cpp  random_generator.h
src/overlaybd/cache/gzip_cache/: CMakeLists.txt  cached_fs.cpp  cached_fs.h
src/overlaybd/cache/ocf_cache/: CMakeLists.txt  ocf_cache.cpp  ocf_namespace.cpp  ocf_namespace.h
src/overlaybd/cache/ocf_cache/ease_bindings/: ctx.cpp  (+7 more)
src/overlaybd/cache/policy/: lru.h
src/overlaybd/cache/test/: CMakeLists.txt  cache_test.cpp  random_generator.h
src/overlaybd/elink/: CMakeLists.txt  config.h  def.h  elink.h  elink_file.cpp  oss_auth.cpp  reference_list.cpp
src/overlaybd/elink/test/: CMakeLists.txt  test.cpp
src/overlaybd/executor/: executor.h  stdlock.h
src/overlaybd/extfs/: CMakeLists.txt  buffer_file.h  extfs.cpp  extfs.h  extfs_io.cpp  extfs_utils.h  mkfs.cpp
src/overlaybd/extfs/test/: CMakeLists.txt  test.cpp
src/overlaybd/fs/: CMakeLists.txt  aligned-file.cpp  aligned-file.h  asyncfs.cpp  asyncfs.h  exportfs.cpp  exportfs.h  fiemap.h  filesystem.h  forwardfs.h  localfs.cpp  localfs.h  path.cpp  path.h  range-split-vi.h  range-split.h  subfs.cpp  subfs.h  tar_file.cpp  tar_file.h  throttled-file.cpp  throttled-file.h  virtual-file.cpp  virtual-file.h
src/overlaybd/fs/cache/: CMakeLists.txt  cache.cpp  cache.h  pool_store.h
src/overlaybd/fs/lsmt/: CMakeLists.txt  file.cpp  file.h  index.cpp  index.h
src/overlaybd/fs/registryfs/: CMakeLists.txt  registryfs.cpp  registryfs.h
src/overlaybd/fs/test/: CMakeLists.txt  crc-test.cpp  mock.h  test.cpp  test_throttledfile.cpp
src/overlaybd/fs/zfile/: CMakeLists.txt  README.md  compressor.cpp  compressor.h  tar_zfile.cpp  tar_zfile.h  zfile.cpp  zfile.h
src/overlaybd/gzindex/: CMakeLists.txt  gzfile.cpp  gzfile.h  gzfile_index.h  gzip_index_create.cpp
src/overlaybd/gzindex/test/: CMakeLists.txt  test.cpp
src/overlaybd/gzip/: CMakeLists.txt  gz.cpp  gz.h
src/overlaybd/lsmt/: CMakeLists.txt  file.cpp  file.h  format_spec.md  index.cpp  index.h
src/overlaybd/lsmt/test/: CMakeLists.txt  lsmt-filetest.h  test.cpp
src/overlaybd/net/: CMakeLists.txt  curl.cpp  curl.h
src/overlaybd/otel/: CMakeLists.txt  CmakeLists.txt  tracer_common.cpp  tracer_common.h
src/overlaybd/photon/: CMakeLists.txt  export.cpp  export.h  kfifo.c  kfifo.h  list.h  queue.h  switch_context.s  thread-pool.cpp  thread-pool.h  thread.cpp  thread.h  thread11.h  timer.h
src/overlaybd/photon/syncio/: aio-wrapper.cpp  aio-wrapper.h  epoll.cpp  fd-events.h  signal.h  signalfd.cpp
src/overlaybd/photon/test/: CMakeLists.txt  signalfdtest.cpp  test-syncio.cpp  test.cpp
src/overlaybd/registryfs/: CMakeLists.txt  registryfs.cpp  registryfs.h  registryfs_v2.cpp
src/overlaybd/stream_convertor/: CMakeLists.txt  config.h  config_utils.h  stream_conv.cpp
src/overlaybd/tar/: CMakeLists.txt  header.cpp  libtar.cpp  libtar.h  tar_file.cpp  tar_file.h  tarerofs.cpp  tarerofs.h  whiteout.cpp
src/overlaybd/tar/erofs/: CMakeLists.txt  erofs_common.cpp  erofs_common.h  erofs_fs.cpp  erofs_fs.h  liberofs.cpp  liberofs.h  tarerofs_impl.cpp  tarerofs_impl.h  tarerofs_interface.h
src/overlaybd/tar/test/: CMakeLists.txt  test.cpp
src/overlaybd/test/: CMakeLists.txt  test.cpp  test_scalepool.cpp
src/overlaybd/untar/: CMakeLists.txt  header.cpp  libtar.cpp  libtar.h  whiteout.cpp
src/overlaybd/untar/test/: CMakeLists.txt  test.cpp
src/overlaybd/untar/test2/: CMakeLists.txt  main.cpp
src/overlaybd/zfile/: CMakeLists.txt  README.md  compressor.cpp  compressor.h  format_spec.md  zfile.cpp  zfile.h
src/overlaybd/zfile/crc32/: crc32c.cpp  crc32c.h
src/overlaybd/zfile/lz4/: lz4-qat.c  lz4-qat.cpp  lz4-qat.h  lz4.h
src/overlaybd/zfile/test/: CMakeLists.txt  test.cpp
src/overlaybd/zstd/: CMakeLists.txt  zstdfile.cpp  zstdfile.h
src/test/: CMakeLists.txt  image_service_test.cpp  resize_test.cpp  simple_auth_server.cpp  simple_credsrv_test.cpp  test.cpp  trace_test.cpp
src/tgt-headers/: log.h  tgtd.h
src/tools/: CMakeLists.txt  comm_func.cpp  comm_func.h  fastoci-apply.cpp  overlaybd-apply.cpp  overlaybd-check.cpp  overlaybd-commit.cpp  overlaybd-create.cpp  overlaybd-info.cpp  overlaybd-merge.cpp  overlaybd-resize.cpp  overlaybd-zfile.cpp  qcow2converter.cpp  qcow2converter.h  sha256file.cpp  sha256file.h  turboOCI-apply.cpp
(+110 files in other folders)
